# resume-api

./: .env.example  .gitignore  LICENSE.md  README.md  generate-requirements.sh  liara-deploy.sh  prod.env.example  pyproject.toml  release.sh  requirements.txt
.github/workflows/: liara.yaml
resume-api/authentication/migrations/: 0001_initial.py
resume-api/core/: urls.py
resume-api/core/settings/: __init__.py  base.py  devel.py  utils.py
resume-api/resume/migrations/: 0001_initial.py
resume-api/resume/models/: __init__.py  profile.py  project.py  work_experience.py
resume-api/resume/v1/: urls.py
resume-api/shared/models/: etc.py  tags.py
resume-api/shared/schemas/: __init__.py  tags.py
resume_api/: liara.json  requirements.txt
resume_api/authentication/migrations/: 0002_user_profile_url.py  0003_user_profile_image.py  0004_user_birth_date.py  0005_user_birthdate_type.py  0006_user_contact_info.py
resume_api/authentication/models/: __init__.py  user.py
resume_api/authentication/v1/: urls.py
resume_api/core/settings/: __init__.py  base.py  dev.py
resume_api/resume/migrations/: 0002_default_ordering.py  0003_profile_nullable_image_url.py  0004_project_tags_workexperience_tags.py  0005_default_ordering_ascending.py  0006_profile_introduction.py  0007_profile_user.py  0008_project_workexperience_user.py  0009_profile_birth_date_removed.py  0010_profile_contact_info_removed.py  0011_cover_letter.py  0012_tagsfield_max_length.py  0013_profile_about_me_allow_blank.py  0014_profile_project.py  0015_profile_work_experience.py
resume_api/resume/models/: __init__.py  link.py  (+9 more)
resume_api/shared/: settings.py
(+42 files in other folders)
