[tool.poetry]
name = "resume-api"
version = "0.1.0"
description = ""
authors = ["Alireza Jafari <alirezaja1384@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
djangorestframework = "^3.15.0"
markdown = "^3.6"
django-bleach = "^3.1.0"
djangorestframework-simplejwt = {extras = ["crypto"], version = "^5.3.1"}
django-cors-headers = "^4.3.1"
drf-spectacular = "^0.27.1"
dj-database-url = "^2.1.0"
gunicorn = "^21.2.0"
python-decouple = "^3.8"
psycopg = {extras = ["binary"], version = "^3.1.18"}
uvicorn = "^0.29.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"
werkzeug = "^3.0.1"
django-extensions = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
